src/pages/Regions/Form.module.css
  
  .formSelectAlignCenter{
    align-Items: flex-start;
  }


.inputField{
    float: right;
    text-align: left;
    max-width: 320px;
    width:320px;
  }

  .datePicker { 
    width: 100%;
  }

  @media (max-width: 576px){
    .inputField{
    width: 100%;
    }
  }

  
  .selectField {
    float: right;
    text-align: left;
    width:320px;
   
  }
  
  .formOption {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .formField {
    width: 100%;
  }

  .cardButton{
    float: right;
    inline-size: -webkit-fill-available;
    margin-top: 7px;
    color:#3c5438;
    border-color: #3c5438;
    max-width: 320px;
    min-width: 320px;
  }

